# api_agendify

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: init.sql
src/: database.py  main.py
src/application/dto/: professional_dto.py
src/application/schemas/: appointment.py  availability.py  customer.py  professional.py
src/application/use_cases/appointment/: cancel_appointment.py  create_appointment.py  get_by_id_appointment.py  list_appointment.py
src/application/use_cases/auth/: generate_verification_token.py  refresh_access_token.py  refresh_token.py
src/application/use_cases/availability/: create_availability.py  delete_availability.py  get_by_id_availability.py  list_availability.py
src/application/use_cases/customer/: login_by_id_customer.py  register_customer.py
src/application/use_cases/professional/: check_professional_email.py  confirm_email_change_for_professional.py  delete_professional.py  generate_register_verification_professional.py  get_professional.py  login_professional.py  logout_professional.py  register_professional.py  request_password_reset_for_professional.py  reset_password_for_professional.py  send_email_to_change_email_for_professional.py  update_professional_profile.py
src/controllers/: customer.py  refresh_token.py
src/domain/entities/: appointment.py  availability.py  customer.py  professional.py  refresh_token.py
src/domain/repositories/: appointment_repository.py  availability_repository.py  customer_repository.py  professional_repository.py  refresh_token_repository.py
src/domain/services/: email_service.py
src/infrastructure/: settings.py
src/infrastructure/database/: database.py  session.py
src/infrastructure/database/models/: __init__.py  appointment.py  availability.py  customer.py  professional.py  refresh_token.py
src/infrastructure/database/repositories/: appointment_repository.py  availability_repository.py  customer_repository.py  professional_repository.py  refresh_token_repository.py
src/infrastructure/email/: fastapi_mail_service.py  mail_config.py
src/infrastructure/email/templates/: email_change_confirmation.html  login_email.html  password_reset_email.html  verification_email.html  welcome_email.html
src/infrastructure/security/: password_hasher.py  token_service.py
src/presentation/controllers/: appointment_controller.py  availability_controller.py  customer_controller.py  professional_controller.py  refresh_token_controller.py
src/presentation/dependencies/: appointment.py  auth.py  availability.py  customer.py  database.py  email.py  professional.py
