[project]
name = "agendify"
version = "0.1.0"
description = ""
authors = [
    {name = "Douglas Phelipe",email = "douglasphelipedpss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "alembic (>=1.16.4,<2.0.0)",
    "databases[aiosqlite]",
    "python-multipart",
    "fastapi-mail (>=1.5.8,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.4"

