[project]
name = "api_agendify"
version = "0.1.0"
description = ""
authors = [
    { name = "Douglas Phelipe", email = "douglasphelipedpss@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "fastapi",
    "uvicorn[standard]",

    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary",

    # Migrations
    "alembic>=1.16.4,<2.0.0",

    # Auth / Security
    "python-jose[cryptography]",
    "passlib[bcrypt]==1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart<4.1",

    # Config
    "python-dotenv",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Email
    "fastapi-mail>=1.5.8,<2.0.0",
    "jinja2>=3.1.6,<4.0.0",
]

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.4"
black = "^24.4.2"
flake8 = "^7.0.0"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # conflito com black
    "W503",  # conflito com black
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "migrations",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
